# recepie_scraper

./: .gitignore  pyproject.toml
src/recepie_scraper/: __init__.py  db.py  main.py  models.py  scaling.py  scraper.py  unit_conversion.py
src/web/: app.py
src/web/static/: style.css
src/web/templates/: _recipe_card.html  _recipe_list.html  base.html  index.html  recipe.html
test/: conftest.py  test_conversion.py  test_main.py  test_models.py  test_scaling.py  test_scraper.py
